2004-06-02  Thomas Heller  <theller@python.net>

	* source\run_dll.c: From Mark Hammond: patch to correctly manage
	the thread state.

2004-06-01  Thomas Heller  <theller@python.net>

	* setup.py, source/icon.rc: Change so that py2exe can be built
	with mingw32.

2004-04-28  Thomas Heller  <theller@python.net>

	* py2exe\build_exe.py: Run the 'build' command before actually
	building the exe, and insert the lib and plat_lib directories to
	sys.path.  After the exe is built, sys.path is restored.

	http://sourceforge.net/tracker/?func=detail&atid=115583&aid=911596&group_id=15583

2004-04-27  Thomas Heller  <theller@python.net>

	* py2exe\build_exe.py: Fix ModuleFinders import_module() method,
	see http://python.org/sf/876278.  I assume the fix will it make
	into Python 2.4, but not earlier versions.

2004-04-26  Thomas Heller  <theller@python.net>

	* (Message): Add flush() methods to the Blackhole and Stderr
	objects for windows programs.


2004-04-18  Mark Hammond
	
	* (build_exe.py): Patch sys.winver in the distributed
	pythonxx.dll, so that there is no possibility of conflicts with
	existing distributions and the registry keys found there.  Of
	note, ActivePython/old win32all versions registered 'Modules', and
	these were used in preference to the one shipped with py2exe,
	generally causing problem.

2004-04-07  Thomas Heller  <theller@python.net>

	* (EXCLUDED_DLLS): Readded the builtin list of system dlls to
	exclude.

2004-03-23  Thomas Heller  <theller@python.net>

	* source\py2exe_util.c: The code was calling CreateFileW directly
	instead of the function in unicows.dll, this had the effect that
	the icons could not be changed on Win98.

2004-03-12  Thomas Heller  <theller@python.net>

	* py2exe\resources\VersionInfo.py: Version resource built by
	py2exe was wrong: found by Roger Upole, reported on c.l.p

2004-03-02  Thomas Heller  <theller@python.net>

	* py2exe\boot_service.py: Print a message when a service exe is
	started from the command line.
